# metal-app

./: TODO.md
app/: BUILD.gn
app/controller/: AAPLViewController.h  AAPLViewController.m  ViewController.h  ViewController.m  WindowController.m
app/model/: AAPLRenderer.h  AAPLRenderer.mm  Renderer.h  Renderer.mm
app/shaders/: AAPLShaderTypes.h  AAPLShaders.metal  BUILD.gn  ShaderTypes.h  Shaders.metal
app/util/: AAPLConfig.h
app/view/: AAPLNSView.h  AAPLNSView.m  AAPLView.h  AAPLView.m  MetalLayerView.h  MetalLayerView.m  View.h  View.m
